--- a/251125_project/styles.css
+++ b/251125_project/styles.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
+    min-height:100vh;
     background-color: rgb(158, 158, 158);
 }
 
@@ -24,20 +24,20 @@ body {
     justify-content: center;
     align-items: stretch;
     flex-wrap: wrap;
-
-    margin:auto;
+    
     min-height: 30vh;
     width: 60%;
     max-width: 700px;
+
     border-radius: 15px;
     background-color:black;
     color:white;
-    gap:10px;
+    gap:5px;
 }
 
 .box-container1 {
     display: flex;
-    flex: 1;
+    flex: 1 1 200px;
     flex-direction: column;
     justify-content: space-evenly;
     align-items:center;
@@ -45,11 +45,10 @@ body {
     background-color:rgb(42, 71, 71);
     border-left: 5px solid whitesmoke;
     padding: 15px;
-    margin: 10px;
+    margin:10px;
     border-radius: 10px;
     gap:20px;
-
-    min-width:200px;
+    min-width: 100px;
 }
 
 .profile-picture {
@@ -98,8 +97,7 @@ body {
     display:flex;
     flex-direction:column;
     justify-content:space-evenly;
-    flex: 2;
-    min-width: 250px;
+    flex: 2 1 400px;
     background-color:rgb(42, 71, 71);
     border-left: 5px solid whitesmoke;
     padding: 20px;
