--- a/251129_project/styles.css
+++ b/251129_project/styles.css
@@ -23,6 +23,7 @@ body {
     display:flex;
     flex-direction:column;
     padding:10px;
+    flex: 1 1 0;
 }
 
 .container-1 .child1-1 {
@@ -40,6 +41,7 @@ body {
     display:flex;
     flex-direction:column;
     padding:10px;
+    flex: 1 1 0;
 }
 
 .container-2 .child2-1 {
