--- a/251130_project/styles.css
+++ b/251130_project/styles.css
@@ -51,13 +51,26 @@ header {
     margin:auto;
 }
 
+.about:hover,
+.types:hover,
+.how:hover {
+    padding: 10px;
+    border-bottom: 3px solid gray;
+    border-radius: 4px;
+    text-align: left;
+    color: black;
+    width: 90%;
+    margin: auto;
+    background-color:black;
+    color:yellow;
+    transition-property: background-color;
+    transition-duration: 2s;
+}
+
 h2, h3 {
     text-transform: uppercase;
 }
-.about:hover, .types:hover, .how:hover {
-    color:blue;
-    font-weight:900;
-}
+
 
 .about-contents-1, .how-contents {
     border-left: 3px solid;
@@ -71,7 +84,7 @@ h2, h3 {
 .about-contents-2 {
     display:flex;
     flex-direction:row;
-    justify-content:space-evenly;
+    justify-content:center;
     align-items:stretch;
     flex-wrap:wrap;
     width: 80%;
@@ -85,6 +98,7 @@ h2, h3 {
     padding:30px;
     margin:10px;
     background-color:black;
+    
 }
 .about-card1 p,
 .about-card2 p {
@@ -109,6 +123,8 @@ h2, h3 {
     flex-direction:row;
     align-items:stretch;
     flex-wrap:wrap;
+    width: 90%;
+    margin:auto;
 }
 
 .type-contents-1, .type-contents-2 {
@@ -118,6 +134,7 @@ h2, h3 {
     align-items:center;
     flex: 1 1 0;
     padding:40px;
+    
 }
 
 .type-name {
@@ -132,6 +149,14 @@ h2, h3 {
     font-weight:900;
 }
 
+.card {
+    display:flex;
+    flex-direction:column;
+    width:80%;
+    margin:auto;
+    justify-content:center;
+    align-items:auto;
+}
 
 /* footer */
 
