--- a/251206_project/public/styles.css
+++ b/251206_project/public/styles.css
@@ -10,7 +10,7 @@
     justify-content:center;
     align-items: stretch;
     min-height:100vh;
-    width:80%;
+    width:50%;
     margin:auto;
     gap:10px;
 
@@ -73,6 +73,8 @@
     font-size: 1.2em;
     min-height: 1.5em;
     margin-top: 10px;
+    text-align:center;
+
 }
 
 .success {
