--- a/level-2-final-project/Level_2_Final/styles.css
+++ b/level-2-final-project/Level_2_Final/styles.css
@@ -255,6 +255,15 @@ main h3 {
     background-color: #e0e0e0;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
+
+.fetchDisplay {
+    color: white;
+    width: 100%;            
+    box-sizing: border-box; 
+    border-radius: 8px;
+    box-shadow: none; 
+    list-style: none;
+}
 footer {
     display:flex;
     flex-direction:column;
